Fixed text vertical alignment and mobile responsiveness

--- a/Tic-Tac-Toe/css/styles.css
+++ b/Tic-Tac-Toe/css/styles.css
@@ -115,8 +115,8 @@ header {
 /*****************GAME BOARD STYLES*****************/
 .game-board {
 	margin: 1.5em auto;
-	width: 40vh;
-	height: 40vh;
+	width: 300px;
+	height: 300px;
 	display: flex;
 	flex-direction: column;
 	flex-wrap: wrap;
@@ -145,7 +145,7 @@ header {
 	text-align: center;
 	font-family: 'Gamja Flower', cursive;
 	font-size: 8em;
-	line-height: 0.6em;
+	line-height: 75px;
 }
 
 	.box:hover {
@@ -222,7 +222,7 @@ header {
 /*****************RESPONSIVE STYLES*****************/
 
 /* Tablet */
-@media screen and (min-width: 640px) {
+@media screen and (min-width: 500px) {
 	header {
 		font-size: 2.5em;
 	}
@@ -236,13 +236,13 @@ header {
 	}
 
 	.game-board {
-		width: 65vh;
-		height: 65vh;
+		width: 460px;
+		height: 460px;
 	}
 
 	.box {
 		font-size: 12em;
-		line-height: 0.68em;
+		line-height: 110px;
 	}
 
 	.socials {
@@ -256,5 +256,14 @@ header {
 		font-size: 1.7em;
 		width: 40%;
 		left: 30%;
+	}
+
+	.game-board {
+		height: 550px;
+		width: 550px;
+	}
+
+	.box {
+		line-height: 145px;
 	}
 }
